--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,8 +1,11 @@
-@InProceedings{XXX,
-  author = 	 {Author 1 and Author 2},
-  title = 	 {Awesome Publication},
-  booktitle =    {International Conference on Awesome Research},
-  year = 	 2014,
-  month = 5,
-  url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
+@article{son2013study,
+  title={A study of user data integrity during acquisition of Android devices},
+  author={Son, Namheun and Lee, Yunho and Kim, Dohyun and James, Joshua I and Lee, Sangjin and Lee, Kyungho},
+  journal={Digital Investigation},
+  volume={10},
+  pages={S3--S11},
+  year={2013},
+  month={Aug.},
+  publisher={Elsevier}
 }
+
