--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -6,6 +6,8 @@
   pages={S3--S11},
   year={2013},
   month={Aug.},
-  publisher={Elsevier}
+  publisher={Elsevier},
+  doi={10.1016/j.diin.2013.06.001},
+  url={https://doi.org/10.1016/j.diin.2013.06.001}
 }
 
