--- a/_posts/2019-07-26-test-info.md
+++ b/_posts/2019-07-26-test-info.md
@@ -3,6 +3,8 @@ layout: post
 icon: calendar-alt
 title:  "Digital Forensics and IT-Related Exam Information"
 ---
+This is a list of exam dates for different digital forensic and technology or security exams.
+
 ## IN CHRONICAL ORDER
 
 [CompTIA Website](https://certification.comptia.org/)
