--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,3 +1,17 @@
+@mastersthesis{Birhanu2019,
+author = {Birhanu, Addisu Afework},
+keywords = {Forensics,IoT},
+mendeley-groups = {Alum},
+mendeley-tags = {IoT,Forensics},
+pages = {111},
+school = {Hallym University},
+title = {{Smart Home IoT Forensics}},
+type = {Masters of Science},
+url = {https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart{\_}Home{\_}IoT{\_}Forensics.pdf},
+year = {2019},
+month = {Jul.}
+}
+
 @article{son2013study,
   title={A study of user data integrity during acquisition of Android devices},
   author={Son, Namheun and Lee, Yunho and Kim, Dohyun and James, Joshua I and Lee, Sangjin and Lee, Kyungho},
