fix thesis link

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -7,7 +7,7 @@ pages = {111},
 school = {Hallym University},
 title = {{Smart Home IoT Forensics}},
 type = {Masters of Science},
-url = {https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart{\_}Home{\_}IoT{\_}Forensics.pdf},
+url = {https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Addisu-Smart_Home_IoT_Forensics.pdf},
 year = {2019},
 month = {Jul.}
 }
