add year to thesis

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,4 +1,5 @@
 @mastersthesis{Birhanu2019,
+annote = {English},
 author = {Birhanu, Addisu Afework},
 keywords = {Forensics,IoT},
 mendeley-groups = {Alum},
