author and tags test

--- a/_posts/2019-08-02-디지털-포렌식이-뭔가요?.md
+++ b/_posts/2019-08-02-디지털-포렌식이-뭔가요?.md
@@ -2,18 +2,20 @@
 layout: post
 title: "디지털 포렌식이 뭔가요?"
 icon: star-o
+author: 2018jiyoon
+tags: [forensics, research]
 ---
 
-숙명여고 쌍둥이사건이나 버닝썬 정준영 황금폰 사건에 관련된 뉴스를 보면 "디지털 포렌식"이라는 단어를 많이 듣게 됩니다.
-여러분에게 생소한 단어일 수 도 있지만, tv에서 "디지털 포렌식"이라는 단어를 듣게 되면 가슴이 설렙니다. 
-경찰과 검찰이 디지털 포렌식 기술을 사용해서 사건에 관련된 증거를 찾아내고 입증을 했다고 하는데 과연 디지털 포렌식 기술이 뭘까요? 
+    숙명여고 쌍둥이사건이나 버닝썬 정준영 황금폰 사건에 관련된 뉴스를 보면 "디지털 포렌식"이라는 단어를 많이 듣게 됩니다.
+    여러분에게 생소한 단어일 수 도 있지만, tv에서 "디지털 포렌식"이라는 단어를 듣게 되면 가슴이 설렙니다. 
+    경찰과 검찰이 디지털 포렌식 기술을 사용해서 사건에 관련된 증거를 찾아내고 입증을 했다고 하는데 과연 디지털 포렌식 기술이 뭘까요? 
 
-### 디지털 포렌식이란 : 
-쉽게 말하면, 디지털 관련 증거들을 과학수사 하는 일이며 
-디지털 관련 증거의 수집,분석,보존, 분석 및 법정 증거물로써 제출하는 일련의 과정입니다. 
+    ### 디지털 포렌식이란 : 
+    쉽게 말하면, 디지털 관련 증거들을 과학수사 하는 일이며 
+    디지털 관련 증거의 수집,분석,보존, 분석 및 법정 증거물로써 제출하는 일련의 과정입니다. 
 
 
-<img src="/img/news/dfExplain.jpg">
+    <img style="text-align: center;" src="/img/news/dfExplain.jpg">
 
-도서관에 있는 책을 찾을때, 등록되어있는 도서번호로 책을 찾을 수 있습니다. 도서관에서 도서번호가 삭제되도 책은 그대로 도서관안에 남아있는 것 처럼 사용자들이 디지털 기기안의 내용들을 지워도 디지털 기기안에 데이터는 남아 있게됩니다. 이러한 방법으로 숙명여고 쌍둥이가 사용하던 핸드폰, 정준영이 포맷했던 황금폰을 복구하게 되는 겁니다. 
-다음 포스팅에는 어떻게 디지털포렌식 기술을 사용하고 적용 할 수 있는지에 대해 적어보겠습니다. 
+    도서관에 있는 책을 찾을때, 등록되어있는 도서번호로 책을 찾을 수 있습니다. 도서관에서 도서번호가 삭제되도 책은 그대로 도서관안에 남아있는 것 처럼 사용자들이 디지털 기기안의 내용들을 지워도 디지털 기기안에 데이터는 남아 있게됩니다. 이러한 방법으로 숙명여고 쌍둥이가 사용하던 핸드폰, 정준영이 포맷했던 황금폰을 복구하게 되는 겁니다. 
+    다음 포스팅에는 어떻게 디지털포렌식 기술을 사용하고 적용 할 수 있는지에 대해 적어보겠습니다. 
