more author tests

--- a/404.md
+++ b/404.md
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: 404 Not Found
+permalink: /404
 ---
 Sorry! The server can't find that page.
 
@@ -9,4 +10,4 @@ Please consider trying to find what you need from [the home page][home].
 If you think something might be broken, please send an email to [webmaster][].
 
 [home]: {{ site.base }}/
-[webmaster]: mailto:our-group-webmaster@dept.example.edu
+[webmaster]: mailto:joshua.i.james+LIFSPage@hallym.ac.kr
