big fix and author fix

--- a/_posts/2019-08-02-디지털-포렌식이-뭔가요?.md
+++ b/_posts/2019-08-02-디지털-포렌식이-뭔가요?.md
@@ -2,7 +2,7 @@
 layout: post
 title: "디지털 포렌식이 뭔가요?"
 icon: star-o
-author: 2018jiyoon
+author: "함지윤 (Jiyoon Ham)"
 tags: [forensics, research]
 ---
 
