update all blog posts with authors and keywords

--- a/_posts/2019-07-26-test-info.md
+++ b/_posts/2019-07-26-test-info.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-icon: calendar-alt
+icon: fa-calendar-alt
 title:  "Digital Forensics and IT-Related Exam Information"
+author: 2019sungmi
+tags: [events]
 ---
 This is a list of exam dates for different digital forensic and technology or security exams.
-
-## IN CHRONICAL ORDER
 
 [CompTIA Website](https://certification.comptia.org/)
 
