--- a/_posts/2019-07-26-test-info.md
+++ b/_posts/2019-07-26-test-info.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-icon: fa-calendar-alt
+icon: calendar-alt
 title:  "Digital Forensics and IT-Related Exam Information"
 author: 2019sungmi
 tags: [events]
