--- a/_posts/2019-09-16-2019-Fall-SRC.md
+++ b/_posts/2019-09-16-2019-Fall-SRC.md
@@ -1,33 +1,23 @@
 ---
 layout: post
-title: "Office 365 Student Advantage Program"
+title: "2019 Fall Security Research Club at Hallym University"
 icon: calendar-alt
-tags: [notice]
+tags: [SRC, club, security, research]
+author: profJames
 ---
 
-1. 서비스 재시작 일자 : 2019년 8월 19일(월)
-2. 이용 대상 : 재직(재학) 중인 전체 교직원 및 학생
-3. 지원 서비스 :
-  * 정품오피스 설치 이용 대수
-    - 개인 소유의 PC 및 노트북 : 5대, 모바일 디바이스 : 5대
-  * 웹메일(모바일 연동) 제공 : 50GB
-  *  개인 저장 공간 제공 : 1TB
-  * 기타 : 웹 오피스(Word, Excel, PowerPoint 등), 메신저, 화상회의, 협업 등의 학생들을 위한 Microsoft의 클라우드 서비스 프로그램 제공
-4. Office 365 사용자 로그인 인터넷 주소
-  * PC, 노트북 : [http://hlo365.hallym.ac.kr](http://hlo365.hallym.ac.kr) 에서 로그인
-    - 통합정보 시스템에서 “Office365 가입 => Office365 가입하기”를 한 후에 사용할 수가 있음.
-5. 문의사항 : ☏ 2955(유상희), 2960(박준석)
+The Fall 2019 Security Research Group (SRC) study survey is in. Overall, members were interested in studying
+1. Computer Networking
+2. Computer Security
+3. Computer fundamentals
+4. Korean Digital Forensics Certification
 
-## Office 365 Student Advantage Program at Hallym University
-1. Service restart date: Monday, August 19, 2019
-2. Eligibility: All staff and students in school
-3. Support service:
-  * Number of genuine office installations
-    - Privately owned PCs and laptops: 5, Mobile devices: 5
-  * Webmail (mobile interworking) provided: 50GB
-  * Personal storage space provided: 1TB
-  * Others: Microsoft's cloud service program for students such as web office (Word, Excel, PowerPoint, etc.), messenger, video conferencing, and collaboration
-4. Office 365 user login Internet address
-  * PC, Laptop: Log in at [http://hlo365.hallym.ac.kr] (http://hlo365.hallym.ac.kr)
-    - It can be used after “Join Office365 => Join Office365” in the integrated information system.
-5. Inquiries: 955 2955 (Yoo Sang Hee), 2960 (Park Jun Suk)
+See the results below:
+
+![Security Research Club Interests](20190916-SRC-Study-Survey.jpg)
+
+Based on the survey from this semester we will open one student-organized study group for computer networking.
+
+### Projects
+This semester we also gave the option to join some ongoing research projects in the lab. By far, the winning project
+was Open Source Intelligence Gathering using Python. We will create an open study session for that project.
