--- a/_posts/2019-09-16-2019-Fall-SRC.md
+++ b/_posts/2019-09-16-2019-Fall-SRC.md
@@ -14,7 +14,7 @@ The Fall 2019 Security Research Group (SRC) study survey is in. Overall, members
 
 See the results below:
 
-![Security Research Club Interests](20190916-SRC-Study-Survey.jpg)
+![Security Research Club Interests](img/blog/20190916-SRC-Study-Survey.jpg)
 
 Based on the survey from this semester we will open one student-organized study group for computer networking.
 
