--- a/_projects/2018-LAW.md
+++ b/_projects/2018-LAW.md
@@ -1,5 +1,5 @@
 ---
-title: L.A.W. Large-Scale Automatic Writeblocking
+title: L.A.W. Large-Scale Automatic Write-blocking
 notitle: false
 description: |
   A project to develop more efficient bulk forensic imaging solutions.
