--- a/_projects/2018-LAW.md
+++ b/_projects/2018-LAW.md
@@ -4,18 +4,18 @@ notitle: false
 description: |
   A project to develop more efficient bulk forensic imaging solutions.
 
-people:
-  - 2017Kyoungjae
-  - 2018jiyoon
-  - ugradDavid
-  - ugrad007
-  - HappyMaru
-  - profJames
+# people:
+#   - 2017Kyoungjae
+#   - 2018jiyoon
+#   - 2023Keecheol
+#   - ugrad007
+#   - HappyMaru
+#   - profJames
 
 layout: project
 image:
 last-updated: 2019-08-27
-status: active
+status: inactive
 ---
 
 A project to develop more efficient bulk forensic imaging solutions.
