--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -64,11 +64,11 @@
  abstract = {Over the past few years, the government has increased investment in artificial intelligence and big data by promoting the complete digitization of public agencies. This digitization along with digital transformation has brought more attention to accessing court documents particularly the judgments and opinions. It has been announced that as of 2023, all civil cases will be available to the general public in machine-readable format. However, there is no special plan announced for the criminal judgments and lower courts'decisions which had always been hard to obtain. Acquiring lower courts decisions is crucial to building AI-powered criminal law systems, as those decisions focus on disputed facts. Compared to other legal search systems in the private sector and other countries, Korean`Online Access to Judgment' holds a relatively extensive database. However, the usage has been very restricted due to technical limitations and not providing machine-readable file has made it difficult to use this court judgment data to train artificial intelligence. This study analyzes the systematic structure of the online access to judgment service to see if it is feasible to produce data in machinereadable format. And the paper compares legal database of the United States and Germany to show what aspects of Korean system needs to be improved. By suggesting how the current technical limitations can be fixed to accommodate a better user experience and to increase user convenience, we hope to open up opportunities for legal AI service in Korea.},
  author = {Park, Sungmi and Lee, Yuna and Choi, Ari and Ahn, Jung Mihn Jamie},
  file = {G\:\\내 드라이브\\Zotero\\lifs_publications\\park_onlineaccess_2021.pdf},
- journal = {Journal of Police \& Law},
+ journal = {Journal of Police and Law},
  keywords = {Artificial Intelligence,Court records,Legal Tech,Online Access to Written Judgments,Text mining},
  language = {ko},
  number = {3},
- title = {{The `Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)}},
+ title = {{The 'Online Access to Judgment' Service in Korea: A Study on Improving Judgment Data for the Development of Legal AI(Artificial Intelligence)}},
  url = {https://lifs.ac.kr/pubs/park_OnlineAccess_2021.pdf},
  volume = {19},
  year = {2021}
@@ -93,7 +93,7 @@
  author = {Park, Roseop and Kim, Jion and Kim, Changsik and Park, Sungmi},
  doi = {10.22826/JPL.2020.18.2.143},
  file = {G\:\\내 드라이브\\Zotero\\lifs_publications\\park_studyimplementing_2020.pdf},
- journal = {Journal of Police \& Law},
+ journal = {Journal of Police and Law},
  keywords = {Abduct Reasoning,Artificial Intelligence,Crime Reconstruction,Crime Verification,Visualization},
  language = {ko},
  month = {June},
@@ -106,7 +106,7 @@
 }
 
 @article{park_StudyUtilization_2022,
- abstract = {As the interest in big data and artificial intelligence(AI) grows, the field of "Smart Policing" has received increased attention. However, the information collected during the criminal justice process inevitably contains a lot of personal information, and thus its usage for machine learning datasets is limited. The Korean Personal Data Protection Laws have recently adopted major amendments to free up the use of pseudonymized data and ease the way for the expansion of Big Data-driven services. Contrary to this, the strict privacy protection compliance by the police remains the same - causing passive usage of the Criminal Justice Information. This study seeks ways to utilize data on the Korea Information System of Criminal Justice Services(KICS), an electronic work system that the police and three other criminal agencies jointly use to perform investigations. The National Police Agency is implementing various R\&D tasks to converge high-tech and public security sites. However, it is having difficulties providing this usable Criminal Justice Information due to the strict interpretation and application of vague legal provisions. By examining the Criminal Justice Information produced during the criminal justice process and the current status of domestic and overseas use of criminal justice information, this study finds and suggests alternative solutions such as data classification, data-oriented personal information policy, and ways to establish a privacy-compliant environment as countermeasures to pursue both privacy protection and innovative policing development.},
+ abstract = {As the interest in big data and artificial intelligence(AI) grows, the field of "Smart Policing" has received increased attention. However, the information collected during the criminal justice process inevitably contains a lot of personal information, and thus its usage for machine learning datasets is limited. The Korean Personal Data Protection Laws have recently adopted major amendments to free up the use of pseudonymized data and ease the way for the expansion of Big Data-driven services. Contrary to this, the strict privacy protection compliance by the police remains the same - causing passive usage of the Criminal Justice Information. This study seeks ways to utilize data on the Korea Information System of Criminal Justice Services(KICS), an electronic work system that the police and three other criminal agencies jointly use to perform investigations. The National Police Agency is implementing various RandD tasks to converge high-tech and public security sites. However, it is having difficulties providing this usable Criminal Justice Information due to the strict interpretation and application of vague legal provisions. By examining the Criminal Justice Information produced during the criminal justice process and the current status of domestic and overseas use of criminal justice information, this study finds and suggests alternative solutions such as data classification, data-oriented personal information policy, and ways to establish a privacy-compliant environment as countermeasures to pursue both privacy protection and innovative policing development.},
  author = {Park, Sungmi and Ahn, Jung Mihn Jamie},
  file = {G\:\\내 드라이브\\Zotero\\lifs_publications\\park_studyutilization_2022.pdf},
  issn = {2466-1236},
@@ -211,7 +211,7 @@ month = {Jul.}
   address = {{Chuncheon}},
   url = {https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf},
   abstract = {The Korean National Police became authorized to perform independent investigations due to the revision of the Korean Criminal Procedure Act in 2020. As a result, unprecedented importance was placed on the review process of cases investigated by police. However, existing case analysis support tools do not focus on logical verification, tending instead to focus on collecting and analyzing evidence. This fundamental gap in the review and analysis of cases necessitates a support system for argument analysis. The purpose of this study is to (1) automatically extract and classify elements of arguments found in related case documents, (2) group these elements, and (3) retrieve potential alternative hypotheses from a repository of these elements. Argument[ation] Mining is defined as a technology that identifies arguments and evidence and analyzes arguments' structure. To our knowledge, there is no appropriate corpus for argumentation mining available in Korean. We have collected 73 Korean first instance criminal cases, which we analyzed using a modified Toulmin model. We have selected features based on previous research in argument mining to classify the elements of arguments, especially for the legal domain. However, instead of the usual two- to three types of arguments (premise, claim, the main claim), we have attempted to classify the sentences into six types of arguments based on the modified Toulmin model (datum, warrant, backing, claim, rebuttal and rebuttal support). We have used K-means and Fuzzy c-means clustering algorithms to group the argumentative sentences. K-means is a popular clustering method for documents, while a previous research clustering legal arguments proposed fuzzy c-means. Our alternative hypothesis retrieval model assumes that a new document has been analyzed using the technology stated above. Instead of just finding the most similar sentence to an argument, we use a set of rules to determine the potential alternative hypotheses and use sentence similarity to find a related argument group from the argument repository. Then, we use similarity measurements between the argument nodes and relationships (edge) to retrieve the most relevant alternative hypotheses. Using a new argument from a court decision not included in the initial dataset, we found our model successfully identified relevant alternative hypotheses. In the future, we hope to develop our model further and enhance the scope and accuracy of the potential hypotheses generation, and ultimately serve as a stepping stone towards developing an Artificial-Intelligence-driven investigation system.},
-  annotate = {English},
+  language = {English},
   school = {Hallym University},
   keywords = {Alternative Hypothesis Retrieval Model,Argument Mining,Automatic Argument Element Extraction,Crime Investigation,Investigation Verification}
 }
