--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -134,7 +134,7 @@
 
 @mastersthesis{Birhanu2019,
 abstract = {Smart home Internet of Things (IoT) are becoming the mainstream technologies that are being integrated into today society. Recent cyber-attacks and researches on these devices indicate smart home IoT developers do not design and implement data protection solutions comprehensively in the IoT ecosystem. These security weaknesses have different implications for user privacy, safety and digital forensic investigations. This thesis provides an analysis of data protection methods implemented in smart home IoT devices and how the weaknesses can be applied to digital forensic investigation purposes. In this thesis, we included the analysis of four smart home IoT devices (Sen.se Mother, Naver Clova, SKT Nugu and Xiaomi Smart home) user data protection techniques to identify the vulnerabilities that can be exploited to acquire user data for digital forensic investigation purpose. To achieve the goal, we analyzed data security techniques and cloud data acquisition possibilities for the selected smart home IoT devices. The investigation is conducted using a combination of forensic analysis of companion apps on smartphones, network investigation between the app and cloud, between the device and the cloud and security analysis of cloud APIs used between companion apps and the cloud. From the apps data storage security, we showed that all of the apps do not consider data encryption. As a result, if the databases can be extracted from the smartphone, the stored data can be extracted for forensics purposes. Similarly, except one of the devices' companion app, all the apps do not consider data encryption in the shared preference storage. On the other hand, we identified that some of the devices use one-time session tokens for cloud APIs authorization. Based on the research, we were able to acquire artefacts from smartphones and network investigations without security challenges. Moreover, using those artefacts, we were able to acquire user data from the cloud for three of the devices. While using such kind of vulnerabilities helps digital forensics investigations to acquire user data from smart home IoT ecosystem, they also endanger users' privacy and safety if exploited by hackers.},
-annote = {English},
+language = {en},
 author = {Birhanu, Addisu Afework},
 keywords = {App Data Security,Cloud API Security,Cloud Data,Digital Forensic Investigation,Internet of Things,IoT,IoT Security,Network Forensics,Privacy,Smart Home},
 mendeley-groups = {Alum},
@@ -149,7 +149,7 @@ month = {Jul.}
 
 @mastersthesis{Jang2019,
 abstract = {There are previous studies about digital forensics in terms of the Internet of Things (IoT) environment, and cases using IoT device data for crime investigations. However, the acquisition and analysis of data in the IoT environment are still a challenge for digital forensic investigators. In addition, there are no accepted practical and comprehensive digital forensic procedures for investigators and law enforcement agencies to perform digital forensic investigations on IoT-based environments. This work proposes a new model for IoT Forensic specifically for the Data Acquisition procedure from the IoT ecosystem. The model is tested using experiments conducted on IoT devices. The experiment includes the research aspect of investigating the actual IoT devices in order to provide a complete picture of the model. The experiment was divided into Cloud, Network, Client (PC, Mobile) and Device/hub side for each IoT device. The results from the experiments showed that data can be extracted from each category of cloud, network, client, and device, and that the data should be collected as soon as possible with the related devices and collected as much as possible. This is because the data available in the device and in the specified categories can vary depending on the storage and processing capabilities. For example, the device side may have data that the cloud side does not have. The data can be key evidence for a crime scene. And the cloud side includes the more complete update and historical data, while the client and device side include cache data that may be incomplete, outdated, or partially overwritten. Through these test results, this paper also presents the IoT investigation procedure. In order to proceed with data collection from all aspects of IoT ecosystem, it is necessary to analyze data obtained from the client side. Information such as device configuration information and connected devices can be obtained by acquiring and analyzing them. By checking the information of the other connected IoT devices, the investigation can go through the identification step again. The proposed procedure will serve as a guideline from where to start to investigate IoT devices and what the next step is. It will also facilitate investigators and researchers in the digital forensics field to facilitate the data acquisition process and develop data collection tools. This procedure should be tested and verified against a variety of IoT devices until a comprehensive procedure for IoT data acquisition.},
-annote = {English},
+language = {en},
 author = {Jang, Subong},
 keywords = {Client-side Acquisition,Cloud Acquisition,Device Acquisition,Internet of things forensic,IoT Forensic,IoT data acquisition,Network Acquisition},
 mendeley-groups = {Alum},
@@ -164,7 +164,7 @@ month = {Jul.}
 
 @mastersthesis{Brhan2019,
 abstract = {The increasing number of IoT devices used in different application domains is changing the digital forensics landscape by providing a variety of potential data and data sources. However, Current forensic tools and techniques have been slow to adapt to new challenges and demands of collecting and analyzing IoT environment artifacts. Like the traditional forensics, data acquisition is possible from the client-side, network or cloud service in the IoT ecosystem. However, unlike computer forensics, IoT forensics does not normally contain much data on the client-side; since the device's storage is usually limited, the client devices may not save much data except some cache and configuration files. In this case, their cloud service could normally be a great source of potential evidence. Investigators access cloud service data in different ways. They can either attempt to access the cloud service data themselves by authenticating as a user or collaborate with the Cloud Service Provider to collect data. In this thesis, we studied the acquisition and analysis of cloud data from IoT environments to addresses the limitation of client-side acquisition. Specifically, we introduce an acquisition procedure for IoT-related cloud services using Application Programming Interfaces (APIs). Some IoT devices and its cloud services provide APIs for programmers and user while others not. We use both official APIs given by cloud providers and unofficial APIs in which we used different research methods to uncover it. There are previous works that showed and used these official and unofficial APIs for data acquisition purposes. However, every IoT devices and cloud providers have their own API type and structure. Hence, we used the three most popular IoT-related cloud providers - Amazon Alexa, Google Home and SmartThings - to show how to use APIs to acquire cloud-native artifacts from their respective backend cloud service. Using the APIs, we can obtain cloud-centric data from each selected case study cloud services. User command history, user activities, audio files and other additional data obtained from Amazon Alexa cloud. It is also possible to download user activity data, including command issued to the device from Google cloud related to Google Home. From SmartThings cloud, we able to download information, including each device events or action performed on the sensors, user-created locations, Hubs, account detail, rooms information, etc. To help investigators in automating the acquisition process, we designed and developed a python application that connects and retrieve every possible information stored in their respective cloud services. The application is a user interface-based tool with an option to select different filtration parameters, authentication option, data parsing. The tool also provides logging every action and documenting all the downloaded file metadata, including the calculated hash. Further, to evaluate the completeness of the acquired cloud data, we generated data in a controlled environment with specific set of actions and scripts, then compare the API-based acquired data with the generated data.},
-annote = {English},
+language = {en},
 author = {Brhan, Yohannes Yemane},
 keywords = {API-based cloud data acquisition,Amazon Alexa forensics,Cloud forensics,Google Assistant forensics,IoT forensics,SmartThings forensics,cloud acquisition tool},
 mendeley-groups = {Alum},
@@ -179,7 +179,7 @@ month = {Jul.}
 
 @mastersthesis{Bukola2019,
 abstract = {Cybercrime is a type of transnational crime which investigation is rarely straightforward because of the support it gets from the ever-developing technology. Most cybercrime somehow involves more than one country, and to come about a successful investigation, international cooperation between law enforcement agencies of the relevant countries is essential. MLA between countries is supported usually by international cooperation. INTERPOL is a communication route between law enforcement agencies in different countries, and international treaties like the Budapest Convention, UNODC and some other regional cooperation like ECOWAS bring countries together to support harmonized laws and guidelines to request for help from different countries. With these in place, MLA appears not to be very effective, and ineffectiveness of this formal cooperation is due to some challenges encountered with received requests and making requests to other countries. This research addressed these challenges encountered with MLA requests alongside how knowledgeable law enforcement officers are regarding MLA matters. A survey was conducted to obtain law enforcement officers' take on the subject matter. The result obtained was then used to determine the relationship between officers' knowledge of MLA request (independent variable) and the response time of MLA requests, challenges encountered and the effectiveness of MLA (dependent variables). The responses received were divided into two groups; the Nigerian respondents [40{\%} (21)] and Other countries respondents [60{\%} (31)], the two groups were analyzed separately. The results showed that 38.1{\%} of Nigerian respondents and 45.1{\%} of other countries respondents said their legal provision(s) in terms of requesting information from other countries are moderately effective. MLAT and Interpol were found to be the main channel for asking for assistance from countries. Bureaucracy was found to be one of the noted challenges with sending an MLA request for Nigerian respondents, and a delayed response was the significant challenge with making a request to Nigeria for respondents from other countries. Insufficient information was the noted challenge faced when a request is received from another country for all the respondents. The data revealed that it took 6-12 months on average to process an MLA request and that most of the respondents have an average knowledge on how to make an MLA request. The correlation analysis done between variables in the study revealed that; * The more knowledgeable law enforcement agents are with making requests, the fewer challenges they will encounter with received MLA requests from other countries. * Increased knowledge of how to make an MLA request reduces the length of time it takes to respond to an MLA request. * Knowledge of how to make MLA requests does not affect with regards to the effectiveness of MLA on cybercrime investigations. Policy recommendations that can increase the effectiveness of mutual legal assistance were also explicitly discussed, how they could be carried out, and their advantages and disadvantages were also included.},
-annote = {English},
+language = {en},
 author = {Bukola, Ajayi Betty},
 keywords = {Cybercrime,Cybercrime Investigations,Law,MLA,MLAT,Transnational Crime,Enforcement.},
 mendeley-groups = {Alum},
@@ -199,7 +199,7 @@ month = {Jul.}
   address = {{Chuncheon}},
   url = {https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Jiyoon-A_Study_on_Digital_Forensic_Data_Acquisition_Tools.pdf},
   abstract = {Digital forensic Imaging is vital in digital forensic investigation process. As time changes, the number of digital devices increase in the forensic imaging filed and the spec of digital devices gets advance. However, the imaging methods and procedure have largely stayed the same. The most hard and important point of improving the digital forensic acquisition tool is that it should be fast and forensically sound. Moreover, it should supportthe features that other forensic acquisition on market. While maintain this point, this paper will develop and improve the digital forensic tool by adding more features through survey.},
-  annotate = {English},
+  language = {en},
   school = {Hallym University},
   keywords = {Disk Imaging,Forensic Disk Imaging,Imaging Features}
 }
@@ -211,7 +211,7 @@ month = {Jul.}
   address = {{Chuncheon}},
   url = {https://lifs.hallym.ac.kr/pubs/2021-Thesis-MSc-Sungmi-Alternative_Hypothesis_Retrieval_Model_for_Crime_Investigation_Analysis_Using_Argument_Mining.pdf},
   abstract = {The Korean National Police became authorized to perform independent investigations due to the revision of the Korean Criminal Procedure Act in 2020. As a result, unprecedented importance was placed on the review process of cases investigated by police. However, existing case analysis support tools do not focus on logical verification, tending instead to focus on collecting and analyzing evidence. This fundamental gap in the review and analysis of cases necessitates a support system for argument analysis. The purpose of this study is to (1) automatically extract and classify elements of arguments found in related case documents, (2) group these elements, and (3) retrieve potential alternative hypotheses from a repository of these elements. Argument[ation] Mining is defined as a technology that identifies arguments and evidence and analyzes arguments' structure. To our knowledge, there is no appropriate corpus for argumentation mining available in Korean. We have collected 73 Korean first instance criminal cases, which we analyzed using a modified Toulmin model. We have selected features based on previous research in argument mining to classify the elements of arguments, especially for the legal domain. However, instead of the usual two- to three types of arguments (premise, claim, the main claim), we have attempted to classify the sentences into six types of arguments based on the modified Toulmin model (datum, warrant, backing, claim, rebuttal and rebuttal support). We have used K-means and Fuzzy c-means clustering algorithms to group the argumentative sentences. K-means is a popular clustering method for documents, while a previous research clustering legal arguments proposed fuzzy c-means. Our alternative hypothesis retrieval model assumes that a new document has been analyzed using the technology stated above. Instead of just finding the most similar sentence to an argument, we use a set of rules to determine the potential alternative hypotheses and use sentence similarity to find a related argument group from the argument repository. Then, we use similarity measurements between the argument nodes and relationships (edge) to retrieve the most relevant alternative hypotheses. Using a new argument from a court decision not included in the initial dataset, we found our model successfully identified relevant alternative hypotheses. In the future, we hope to develop our model further and enhance the scope and accuracy of the potential hypotheses generation, and ultimately serve as a stepping stone towards developing an Artificial-Intelligence-driven investigation system.},
-  language = {English},
+  language = {en},
   school = {Hallym University},
   keywords = {Alternative Hypothesis Retrieval Model,Argument Mining,Automatic Argument Element Extraction,Crime Investigation,Investigation Verification}
 }
@@ -223,7 +223,7 @@ month = {Jul.}
   address = {{Chuncheon}},
   url = {https://lifs.hallym.ac.kr/pubs/2019-Thesis-MSc-Minjin-A_Study_on_the_malicious_targeting_of_IoT_devices.pdf},
   abstract = {In the early Internet of Things (IoT), like Machine to Machine (M2M) communication, was a concept of connecting things based on regular communication between things, things, and people. However, IoT is a concept that various objects can learn, judge, and think by using artificial intelligence (AI) and machine learning by attaching communication and sensor functions to devices. As the radical development of IoT is taking place, there are a variety of attacks targeting IoT device vulnerabilities. However, the analysis of vulnerabilities has not been done much. IoT connects the real world with the digital world. Increasingly, if a user is hacked in the digital world, it can affect the real world. In this paper, we analyzed the attack of IoT devices targeting AI smart speaker, one of the most used IoT devices. To proceed with the research, a honeypot, which is widely used for attack analysis, was created. We call it an IoT Honeypot. Every IoT smart device has a port for communicating over the Internet, so after identifying the port that the real device uses, we have made the port as a profile. After that, the public IP address was assigned to the IoT Honeypot for external access, the ports were opened, and the data coming into the ports was collected and analyzed. Analyzing the data coming in through the ports revealed no attacks targeting the device but found attempts to access the port from various places. Attack analysis using IoT Honeypot in this paper can be used for other IoT devices later if only the port of the device can be identified.},
-  annotate = {English},
+  language = {en},
   school = {Hallym University},
   keywords = {AI smart speaker,Honeypot,Internet of Things,IoT device attack,IoT Forensic}
 }
