fixed perma link

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -101,7 +101,7 @@
   url = {https://lifs.ac.kr/pubs/lee_StudyElements_2022.pdf},
   abstract = {Recently, as intelligent legal services have been provided to the judicial field, the importance of judgments as learning data is increasing. Among them, criminal facts are similar to investigative data and serve as valuable data for criminal investigations. But due to the subject being omitted or the form of long sentences, it can be difficult to extract constituent requirements and grasp the causal relationship of an event, so a considerable amount of time and manpower is inevitably consumed in analyzing them. Therefore, in this paper, we propose a methodology that can improve the overall understanding of the event flow by simplifying and visually expressing key event extraction by applying entity name recognition and morpheme analysis-based event extraction techniques using pre-trained model to criminal case reconstruction.},
   language = {ko},
-  keywords = {⛔ No DOI found,Crime Domain Text,Crime Investigation,Event extraction,Named Entitiy Recognition,Timeline Visualization},
+  keywords = {Crime Domain Text,Crime Investigation,Event extraction,Named Entitiy Recognition,Timeline Visualization},
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\lee_studyelements_2022.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\lee_studyelements_22.pdf}
 }
 
@@ -115,7 +115,7 @@
   url = {https://lifs.ac.kr/pubs/nemayire_2018Samsung_2019.pdf},
   abstract = {Internet of Things (IoT) has brought a fair share of challenges for Digital forensics and Law Enforcement Agencies in carrying out their investigative duties. The authors of this paper studied the current trends and noticed an increase in crimes that require digital evidence from Smart TVs. Smart TVs are not only a probable source for digital evidence, but have become an integral part in most digital investigations, since they have the ability to connect to the Internet, store digital materials and are able to be synced with various user cloud accounts. This paper marks out the changes in results when using past well-known acquisition methods on the recent Smart TV device and proposes a general investigation procedure model for data acquisition and probable digital evidence for Smart TVs using Chip-Off methods. Regarding the lack of generally applicable methods for Smart TV forensics, this work for a new model will contribute to collective efforts as a whole.},
   language = {en},
-  keywords = {⛔ No DOI found,IoT Analysis,Samsung TV,Smart TV,Tizen,VDFS},
+  keywords = {IoT Analysis,Samsung TV,Smart TV,Tizen,VDFS},
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\nemayire_2018samsung_2019.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\nemayire_2018samsung_22.pdf}
 }
 
@@ -158,7 +158,7 @@
   url = {https://lifs.ac.kr/pubs/park_OnlineAccess_2021.pdf},
   abstract = {Over the past few years, the government has increased investment in artificial intelligence and big data by promoting the complete digitization of public agencies. This digitization along with digital transformation has brought more attention to accessing court documents particularly the judgments and opinions. It has been announced that as of 2023, all civil cases will be available to the general public in machine-readable format. However, there is no special plan announced for the criminal judgments and lower courts'decisions which had always been hard to obtain. Acquiring lower courts decisions is crucial to building AI-powered criminal law systems, as those decisions focus on disputed facts. Compared to other legal search systems in the private sector and other countries, Korean`Online Access to Judgment' holds a relatively extensive database. However, the usage has been very restricted due to technical limitations and not providing machine-readable file has made it difficult to use this court judgment data to train artificial intelligence. This study analyzes the systematic structure of the online access to judgment service to see if it is feasible to produce data in machinereadable format. And the paper compares legal database of the United States and Germany to show what aspects of Korean system needs to be improved. By suggesting how the current technical limitations can be fixed to accommodate a better user experience and to increase user convenience, we hope to open up opportunities for legal AI service in Korea.},
   language = {ko},
-  keywords = {⛔ No DOI found,Artificial Intelligence,Court records,Legal Tech,Online Access to Written Judgments,Text mining},
+  keywords = {Artificial Intelligence,Court records,Legal Tech,Online Access to Written Judgments,Text mining},
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_onlineaccess_2021.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_onlineaccess_22.pdf}
 }
 
@@ -172,7 +172,7 @@
   url = {https://lifs.ac.kr/pubs/park_PreliminaryStudy_2019.pdf},
   abstract = {Many artificial intelligence (AI) speakers have recently come to market. Beginning with Amazon Echo, many companies producing their own speaker technologies. Due to the limitations of technology, most speakers have similar functions, but the way of handling the data of each speaker is different. In the case of Amazon echo, the API of the cloud is open for any developers to develop their API. The Amazon Echo has been around for a while, and much research has been done on it. However, not much research has been done on Google Home Mini analysis for digital investigations. In this paper, we will conduct some initial research on the data storing and security methods of Google Home Mini.},
   language = {en},
-  keywords = {⛔ No DOI found,Digital forensic investigation,Google Home Mini,IoT,IoT Analysis,Smart Speaker},
+  keywords = {Digital forensic investigation,Google Home Mini,IoT,IoT Analysis,Smart Speaker},
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_preliminarystudy_2019.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_preliminarystudy_22.pdf}
 }
 
@@ -216,7 +216,7 @@
   url = {https://lifs.ac.kr/pubs/park_StudyUtilization_2022.pdf},
   abstract = {As the interest in big data and artificial intelligence(AI) grows, the field of "Smart Policing" has received increased attention. However, the information collected during the criminal justice process inevitably contains a lot of personal information, and thus its usage for machine learning datasets is limited. The Korean Personal Data Protection Laws have recently adopted major amendments to free up the use of pseudonymized data and ease the way for the expansion of Big Data-driven services. Contrary to this, the strict privacy protection compliance by the police remains the same - causing passive usage of the Criminal Justice Information. This study seeks ways to utilize data on the Korea Information System of Criminal Justice Services(KICS), an electronic work system that the police and three other criminal agencies jointly use to perform investigations. The National Police Agency is implementing various RandD tasks to converge high-tech and public security sites. However, it is having difficulties providing this usable Criminal Justice Information due to the strict interpretation and application of vague legal provisions. By examining the Criminal Justice Information produced during the criminal justice process and the current status of domestic and overseas use of criminal justice information, this study finds and suggests alternative solutions such as data classification, data-oriented personal information policy, and ways to establish a privacy-compliant environment as countermeasures to pursue both privacy protection and innovative policing development.},
   language = {ko},
-  keywords = {⛔ No DOI found,criminal justice information,de-identification,personal information,police data,smart policing},
+  keywords = {criminal justice information,de-identification,personal information,police data,smart policing},
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyutilization_2022.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyutilization_22.pdf}
 }
 
