fixed master thesis error

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,4 +1,4 @@
-@phdthesis{birhanu_smarthome_2019,
+@mastersthesis{birhanu_smarthome_2019,
   type = {Masters of Science},
   title = {Smart Home {{IoT}} Forensics},
   author = {Birhanu, Addisu Afework},
@@ -14,7 +14,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\birhanu_smarthome_2019.pdf}
 }
 
-@phdthesis{brhan_apibasedcloud_2019,
+@mastersthesis{brhan_apibasedcloud_2019,
   type = {Masters of Science},
   title = {{{API-Based}} Cloud Data Acquisition and Analysis from Smart Home {{IoT}} Environments},
   author = {Brhan, Yohannes Yemane},
@@ -30,7 +30,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\brhan_apibasedcloud_2019.pdf}
 }
 
-@phdthesis{bukola_studymla_2019,
+@mastersthesis{bukola_studymla_2019,
   type = {Masters of Science},
   title = {A Study on {{MLA}} Request Effectiveness on Cybercrime Investigation in Nigeria},
   author = {Bukola, Ajayi Betty},
@@ -62,7 +62,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\ham_featurecomparison_2019.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\ham_featurecomparison_22.pdf}
 }
 
-@phdthesis{ham_studydigital_2019,
+@mastersthesis{ham_studydigital_2019,
   title = {A Study on Digital Forensic Data Acquisition Tools},
   author = {Ham, Ji Yoon},
   year = {2019},
@@ -75,7 +75,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\ham_studydigital_2019.pdf}
 }
 
-@phdthesis{jang_studyinternet_2019,
+@mastersthesis{jang_studyinternet_2019,
   type = {Mastes of Science},
   title = {A Study on Internet of Things ({{IoT}}) Forensic},
   author = {Jang, Subong},
@@ -119,7 +119,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\nemayire_2018samsung_2019.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\nemayire_2018samsung_22.pdf}
 }
 
-@phdthesis{park_alternativehypothesis_2020,
+@mastersthesis{park_alternativehypothesis_2020,
   title = {Alternative Hypothesis Retrieval Model for Crime Investigation Analysis Using Argument Mining},
   author = {Park, Sungmi},
   year = {2020},
@@ -192,7 +192,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyimplementing_2020.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyimplementing_22.pdf}
 }
 
-@phdthesis{park_studymalicious_2019,
+@mastersthesis{park_studymalicious_2019,
   title = {A Study on the Malicious Targeting of {{IoT}} Devices},
   author = {Park, Minjin},
   year = {2019},
@@ -220,7 +220,7 @@
   file = {G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyutilization_2022.pdf;G\:\\내 드라이브\\Zotero\\lifs_pubs\\park_studyutilization_22.pdf}
 }
 
-@phdthesis{won_reasoningvisualization_2018,
+@mastersthesis{won_reasoningvisualization_2018,
   title = {{The Reasoning Visualization Model for Rational Crime Analysis and Fact Finding - A Study on Error Detection of Reasoning in Fact Finding}},
   author = {Won, Gwangjae},
   year = {2018},
