--- a/_posts/2021-10-28-.md
+++ b/_posts/2021-10-28-.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "  "
+title: " 'The role and Task of Police responsible  investigations and results of police law research' "
 author: 2023seohee
 icon: star-o
 tags: [news]
