--- a/_posts/2021-10-28-.md
+++ b/_posts/2021-10-28-.md
@@ -6,7 +6,7 @@ icon: star-o
 tags: [news]
 ---
  
-# [Korean National Police Agency - Korean Association of Police & Law,  A Seminar was be held on the theme of 'The role and Task of Police responsible  investigations and results of police law research']
+# [Korean National Police Agency - 'The Role and Task of Police Responsible Investigations and Results of Police-Law Research']
 
 The National Police Agency announced on the 28th that it held a joint online academic seminar under the theme of "The Role and Tasks of Police Responsibility Investigation and the Results of Police Law Research" in commemoration of the 100th seminar of the Korean Police Law Association.
 
